--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "~3.3",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        
-        "doctrine/dbal": "^2.9",
         "laravelcollective/html": "^5.2|^5.1",
         "spatie/laravel-backup": "^3.0.0",
         "yajra/laravel-datatables-oracle": "~6.0",
-        "zizaco/entrust": "1.7.0" 
+        "zizaco/entrust": "1.7.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
